# python-project-lvl1

./: .Makefile.swp  .README.md.swp  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: make.yml
brain_games/: .cli.py.swp  __init__.py  cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: .function.py.swp  __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  dvizhok.py  function.py
brain_games/scripts/games/: .brain_gcd.py.swp  .brain_prime.py.swp  .brain_progression.py.swp  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
games/: .brain_even.py.swp  __init__.py
