[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Xisp_93 <voevoda43@gmail.com>"]
packages = [
	{ include = "brain_games" },
]
repository = "https://github.com/Xisp93/python-project-lvl1"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even= "brain_games.scripts.dvizhok:main_even"
brain-calc= "brain_games.scripts.dvizhok:main_calc"
brain-gcd= "brain_games.scripts.dvizhok:main_gcd"
brain-progression= "brain_games.scripts.dvizhok:main_progression"
brain-prime= "brain_games.scripts.dvizhok:main_prime"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
