[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Xisp_93 <voevoda43@gmail.com>"]
packages = [
	{ include = "brain_games" },
]
repository = "https://github.com/Xisp93/python-project-lvl1"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
black = "^22.1.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even= "brain_games.scripts.brain_even:main"
brain-calc= "brain_games.scripts.brain_calc:main"
brain-gcd= "brain_games.scripts.brain_gcd:main"
brain-progression= "brain_games.scripts.brain_progression:main"
brain-prime= "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"
autopep8 = "^1.6.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
